[package]
name = "aoc_2020"
version = "0.1.0"
authors = ["kalleakerblom <kalleakerblom@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scan_fmt = "0.2.5"
cgmath = "0.17.0"
bitvec = "0.19.4"
itertools = "0.9.0"